--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -10,36 +10,36 @@
 --------------------------------------------------------------*/
 :root {
     scroll-behavior: smooth;
-  }
-  
-  body {
+}
+
+body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
-  }
-  
-  a {
+}
+
+a {
     color: #4154f1;
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     color: #717ff5;
     text-decoration: none;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "Nunito", sans-serif;
-  }
-  
-  /*--------------------------------------------------------------
-  # Login
-  --------------------------------------------------------------*/
-  .section-login{
+}
+
+h1, h2, h3, h4, h5, h6 {
+font-family: "Nunito", sans-serif;
+}
+
+/*--------------------------------------------------------------
+# Login
+--------------------------------------------------------------*/
+.section-login{
     display: flex;
     flex-wrap: wrap;
-  }
-  
-  .carrousel{
+}
+
+.carrousel{
     background-color: #081C44;
     text-align: center;
     width: auto;
@@ -47,68 +47,68 @@
     max-width: 100%;
     height: 100vh;
     min-height: 300px;
-  }
-  
-  .carrousel img{
+}
+
+.carrousel img{
     padding: 50px;
     width: 80%;  
     height: 100vh;
     min-height: 300px;
     object-fit: cover;
-  }
-  
-  .formulario{
+}
+
+.formulario{
     align-items: center;
     padding: 30px;
     padding-top: 60px;
-  }
-  
-  .formulario h2{
+}
+
+.formulario h2{
     padding-bottom: 30px;
-  }
-  
-  .form-group input{
+}
+
+.form-group input{
     width: 300px;
     margin-bottom: 30px;
-  }
-  
-  /*--------------------------------------------------------------
-  # Sections
-  --------------------------------------------------------------*/
-  section {
+}
+
+/*--------------------------------------------------------------
+# Sections
+--------------------------------------------------------------*/
+section {
     padding: 60px 0;
     overflow: hidden;
-  }
-  
-  .section-header {
+}
+
+.section-header {
     text-align: center;
     padding-bottom: 40px;
-  }
-  
-  .section-header h2 {
+}
+
+.section-header h2 {
     font-size: 13px;
     letter-spacing: 1px;
     font-weight: 700;
     margin: 0;
     color: #081C44;
     text-transform: uppercase;
-  }
-  
-  .section-header p {
+}
+
+.section-header p {
     margin: 10px 0 0 0;
     padding: 0;
     font-size: 38px;
     line-height: 42px;
     font-weight: 700;
     color: #081C44;
-  }
-  
-  @media (max-width: 768px) {
-    .section-header p {
-      font-size: 28px;
-      line-height: 32px;
-    }
-  }
+}
+
+@media (max-width: 768px) {
+.section-header p {
+    font-size: 28px;
+    line-height: 32px;
+}
+}
   
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -514,13 +514,13 @@ button:hover {
 # Boton de cancelar y anadir publicacion
 --------------------------------------------------------------*/
 
-.button-cancelar .button-anadirpub {
+.button-cancelar, .button-anadirpub {
     text-align: center;
     margin-bottom: 20px;
     padding: 10px;
 }
 
-.button-cancelar .button-anadirpub button {
+.button-cancelar, .button-anadirpub button {
     padding: 7px 50px 7px 50px;
 }
 
@@ -725,11 +725,11 @@ button:hover {
     width: 80px;
 }
 
-.Content-edicion .Content-publicacion {
+.Content-edicion, .Content-publicacion {
     text-align: center;
 }
 
-.Content-edicion .Content-publicacion h2 {
+.Content-edicion h2, .Content-publicacion h2 {
     font-weight: normal;
     text-align: center;
     align-items: center;
