--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -13,6 +13,7 @@
 }
 
 body {
+    margin: 0;
     font-family: "Open Sans", sans-serif;
     color: #444444;
 }
@@ -524,7 +525,7 @@ button:hover {
     padding: 7px 50px 7px 50px;
 }
 
-.button-anadirpub button {
+.button-iniciar button, .button-anadirpub button {
     align-content: center;
     justify-content: center;
     background: #081C44;
@@ -745,6 +746,7 @@ button:hover {
 
 .div-publicaciones {
     display: flex;
+    flex-wrap: nowrap;
     font-weight: normal;
     text-align: center;
     align-items: center;
@@ -753,6 +755,40 @@ button:hover {
     justify-items: center;
 }
 
+.card-view{
+    padding:  50px 30px;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.arboles{    
+    padding: 15px 30px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
+    -box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05), 0;
+}
+
+.card-view .arboles:hover{
+    background-color: #f3f3f360;
+}
+
+.arboles img {
+    width: 150px;
+}
+
+.arboles hr{
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    width: 100%;    
+}
+
+.arboles p{
+    line-height: 10px;
+    text-align: center;
+    color: #081C44;
+}
 
 /*--------------------------------------------------------------
 # Values
