--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -60,7 +60,7 @@ font-family: "Nunito", sans-serif;
 
 .formulario{
     align-items: center;
-    padding: 30px;
+    padding: 80px;
     padding-top: 60px;
 }
 
@@ -69,7 +69,7 @@ font-family: "Nunito", sans-serif;
 }
 
 .form-group input{
-    width: 300px;
+    width: 80%; 
     margin-bottom: 30px;
 }
 
@@ -487,7 +487,8 @@ section {
 
 button {
     border-radius: 15px;
-    padding: 7px 15px 7px 15px;
+    margin: 10px;
+    padding: 10px 30px 10px 30px;
     background-color: #F3F3F3;
     border: 1.2px solid rgba(0, 0, 0, 0.10);
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.15);
@@ -515,7 +516,7 @@ button:hover {
 # Boton de cancelar y anadir publicacion
 --------------------------------------------------------------*/
 
-.button-cancelar, .button-anadirpub {
+.button-cancelar, .button-anadirpub, .button-iniciar {
     text-align: center;
     margin-bottom: 20px;
     padding: 10px;
@@ -531,7 +532,6 @@ button:hover {
     background: #081C44;
     color: white;
 }
-
 
 /*--------------------------------------------------------------
 # Borrar Section
