--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -533,6 +533,11 @@ button:hover {
     color: white;
 }
 
+.button-formulario button{
+    background: #081C44;
+    color: white;
+}
+
 /*--------------------------------------------------------------
 # Borrar Section
 --------------------------------------------------------------*/
@@ -756,14 +761,18 @@ button:hover {
 }
 
 .card-view{
+	height: 100%;
     padding:  50px 30px;
     align-items: center;
     justify-content: space-evenly;
     display: flex;
     flex-wrap: wrap;
+    max-height: 100vh;
 }
 
-.arboles{    
+.arboles{   
+    margin-top: 40px;
+	height: 100%;
     padding: 15px 30px;
     border: 1px solid rgba(0, 0, 0, 0.10);
     -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
@@ -788,6 +797,56 @@ button:hover {
     line-height: 10px;
     text-align: center;
     color: #081C44;
+}
+
+/*--------------------------------------------------------------
+# Modals arboles
+--------------------------------------------------------------*/
+.modal-container{
+	opacity: 0;
+	visibility: hidden;
+	position: fixed;
+	z-index: 1000;
+	width: 100%;
+	height: 100vh; 
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal{
+	width: 40%;
+	height: 50%;
+	background: white;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	position: relative;
+	transition: transform 1s;
+	transform: translateY(0%);
+	border-radius: 10px;
+}
+
+.close{
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	background: red;
+	color: white;
+	line-height: 25px;
+	cursor: pointer;
+	border-radius: 50%;
+}
+
+.modal-close{
+	transform: translateY(-200%);
 }
 
 /*--------------------------------------------------------------
