Formulario de eventos y css de calendario.

--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -77,6 +77,10 @@ font-family: "Nunito", sans-serif;
     margin-bottom: 30px;
 }
 
+.centrado{
+	text-align: center;
+}
+
 /*--------------------------------------------------------------
 # Sections
 --------------------------------------------------------------*/
