--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -36,6 +36,15 @@ font-family: "Nunito", sans-serif;
  color: #081C44;
 }
 
+.add{
+    color: #bababa;
+}
+
+.add:hover{
+    color: #bababa90;
+}
+
+
 /*--------------------------------------------------------------
 # Login
 --------------------------------------------------------------*/
@@ -65,6 +74,7 @@ font-family: "Nunito", sans-serif;
 .formulario{
     align-items: center;
     padding: 80px;
+    padding-bottom: 0px;
     padding-top: 60px;
 }
 
@@ -505,6 +515,7 @@ button, .button {
 }
 
 .button{
+    padding: 11.5px 30px 11.5px 30px;
 	margin: 50px 10px;
 }
 
@@ -777,7 +788,7 @@ button:hover {
 }
 
 .card-view{
-	height: 100%;
+	height: 150%;
     padding:  50px 30px;
     align-items: center;
     justify-content: space-evenly;
