mejoras en tablas

--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -92,6 +92,14 @@ font-family: "Nunito", sans-serif;
 }
 
 /*--------------------------------------------------------------
+# Tablas
+--------------------------------------------------------------*/
+.card-header{
+	margin: 0;
+}
+	
+
+/*--------------------------------------------------------------
 # Sections
 --------------------------------------------------------------*/
 section {
