--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -826,7 +826,8 @@ button:hover {
 }
 
 .arboles{
-	height: 200px;
+	height:280px; 
+	width:240px;
     margin-top: 40px;
     padding: 15px 30px;
     border: 1px solid rgba(0, 0, 0, 0.10);
